--- a/payroll-ms-scripts/Dockerfile
+++ b/payroll-ms-scripts/Dockerfile
@@ -1,6 +1,6 @@
 FROM openjdk:8-jdk-alpine
 
-ARG customer_port=2024
+ARG payroll_port=2029
 
 ENV server.max-http-header-size=16384 \
     bonecp.partitionCount=1 \
@@ -39,9 +39,9 @@ ENV server.max-http-header-size=16384 \
     system.initialclientid=service-runner
 
 WORKDIR /tmp
-COPY customer-service-boot-0.1.0-BUILD-SNAPSHOT.jar .
-ENV spring.application.name="customer-v1" \
-    server.port=$customer_port \
-    server.contextPath="/customer-v1"
+COPY payroll-service-boot-0.1.0-BUILD-SNAPSHOT.jar .
+ENV spring.application.name="payroll-v1" \
+    server.port=$payroll_port \
+    server.contextPath="/payroll-v1"
 
-CMD ["java", "-jar", "customer-service-boot-0.1.0-BUILD-SNAPSHOT.jar"]
+CMD ["java", "-jar", "payroll-service-boot-0.1.0-BUILD-SNAPSHOT.jar"]
