--- a/external-tools/docker-compose.yml
+++ b/external-tools/docker-compose.yml
@@ -1,8 +1,24 @@
 version: "3"
 services:
+  activemq:
+    image: rmohr/activemq:5.14.5
+    container_name: activemq
+    ports:
+      - "61616:61616"
+      - "8161:8161"
+    networks:
+      app_net:
+        ipv4_address: 172.16.238.3
+    # healthcheck:
+    #   test: curl --fail -s http://172.16.238.3:61616/ || exit 1
+    #   interval: 1m30s
+    #   timeout: 10s
+    #   retries: 3
+
   eureka:
     image: springcloud/eureka
     container_name: eureka
+    hostname: eureka
     ports:
       - "8761:8761"
     environment:
@@ -11,32 +27,13 @@ services:
       - error_whitelabel_enabled=false
       - eureka_instance_leaseRenewalIntervalInSeconds=30
       - eureka_server_responseCacheUpdateIntervalMs=50
-      - eureka_instance_hostname=localhost
+      - eureka_instance_hostname=eureka
       - eureka_client_registerWithEureka=false
       - eureka_client_fetchRegistry=false
-      - eureka_serviceUrl_defaultZone=http://localhost:8761/eureka
+      - eureka_serviceUrl_defaultZone=http://eureka:8761/eureka
     networks:
       app_net:
         ipv4_address: 172.16.238.2
-    healthcheck:
-      test: curl --fail -s http://172.16.238.2:8761/ || exit 1
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
-
-  activemq:
-    image: webcenter/activemq:5.14.3
-    container_name: activemq
-    ports:
-      - "61616:61616"
-    networks:
-      app_net:
-        ipv4_address: 172.16.238.3
-    healthcheck:
-      test: curl --fail -s http://172.16.238.3:61616/ || exit 1
-      interval: 1m30s
-      timeout: 10s
-      retries: 3
 
   mariadb:
     image: mariadb
