--- a/identity-ms-scripts/Dockerfile
+++ b/identity-ms-scripts/Dockerfile
@@ -7,7 +7,6 @@ ENV server.max-http-header-size=16384 \
     bonecp.maxConnectionsPerPartition=4 \
     bonecp.minConnectionsPerPartition=1 \
     bonecp.acquireIncrement=1 \
-    server.port=9090 \
     cassandra.clusterName="Test Cluster" \
     cassandra.contactPoints=172.16.238.5:9042 \
     cassandra.keyspace=seshat \
@@ -20,19 +19,16 @@ ENV server.max-http-header-size=16384 \
     mariadb.port=3306 \
     mariadb.user=root \
     mariadb.password=mysql \
-    spring.cloud.discovery.enabled=false \
     spring.cloud.config.enabled=false \
     flyway.enabled=false \
     feign.hystrix.enabled=false \
     ribbon.eureka.enabled=false \
-    ribbon.listOfServers=172.16.238.2:9090 \
     eureka.client.serviceUrl.defaultZone=http://172.16.238.2:8761/eureka \
     spring.cloud.discovery.enabled=true \
-    eureka.instance.hostname=172.16.238.2 \
     eureka.client.fetchRegistry=true \
     eureka.registration.enabled=true \
     eureka.instance.leaseRenewalIntervalInSeconds=1 \
-    initialInstanceInfoReplicationIntervalSeconds=0 \
+    #eureka.initialInstanceInfoReplicationIntervalSeconds=0 \
     eureka.client.instanceInfoReplicationIntervalSeconds=1 \
     activemq.brokerUrl=http://172.16.238.3:61616 \
     ribbon.eureka.enabled=true \
