--- a/rhythm-ms-scripts/Dockerfile
+++ b/rhythm-ms-scripts/Dockerfile
@@ -30,7 +30,7 @@ ENV server.max-http-header-size=16384 \
     spring.cloud.discovery.enabled=true \
     eureka.instance.hostname=172.16.238.2 \
     eureka.client.fetchRegistry=true \
-    eureka.registration.enabled=true \
+    eureka.registration.enabled=false \
     eureka.instance.leaseRenewalIntervalInSeconds=1 \
     initialInstanceInfoReplicationIntervalSeconds=0 \
     eureka.client.instanceInfoReplicationIntervalSeconds=1 \
