--- a/identity-ms-scripts/Dockerfile
+++ b/identity-ms-scripts/Dockerfile
@@ -20,17 +20,19 @@ ENV server.max-http-header-size=16384 \
     mariadb.user=root \
     mariadb.password=mysql \
     spring.cloud.config.enabled=false \
+    spring.cloud.config.enabled=false \
     flyway.enabled=false \
     feign.hystrix.enabled=false \
     ribbon.eureka.enabled=false \
-    eureka.client.serviceUrl.defaultZone=http://172.16.238.2:8761/eureka \
+    ribbon.listOfServers=172.16.238.2:9090 \
+    eureka.client.serviceUrl.defaultZone=http://172.16.238.2:8761/eureka/ \
     spring.cloud.discovery.enabled=true \
+    eureka.instance.hostname=172.16.238.2 \
     eureka.client.fetchRegistry=true \
-    eureka.registration.enabled=true \
+    eureka.registration.enabled=false \
     eureka.instance.leaseRenewalIntervalInSeconds=1 \
-    #eureka.initialInstanceInfoReplicationIntervalSeconds=0 \
     eureka.client.instanceInfoReplicationIntervalSeconds=1 \
-    activemq.brokerUrl=http://172.16.238.3:61616 \
+    activemq.brokerUrl=http://172.16.238.3:61616/ \
     ribbon.eureka.enabled=true \
     system.initialclientid=service-runner \
     spring.profiles.active=production
