--- a/teller-ms-scripts/Dockerfile
+++ b/teller-ms-scripts/Dockerfile
@@ -30,9 +30,8 @@ ENV server.max-http-header-size=16384 \
     spring.cloud.discovery.enabled=true \
     eureka.instance.hostname=172.16.238.2 \
     eureka.client.fetchRegistry=true \
-    eureka.registration.enabled=true \
+    eureka.registration.enabled=false \
     eureka.instance.leaseRenewalIntervalInSeconds=1 \
-    initialInstanceInfoReplicationIntervalSeconds=0 \
     eureka.client.instanceInfoReplicationIntervalSeconds=1 \
     activemq.brokerUrl=http://172.16.238.3:61616 \
     ribbon.eureka.enabled=true \
