--- a/identity-ms-scripts/Dockerfile
+++ b/identity-ms-scripts/Dockerfile
@@ -32,7 +32,7 @@ ENV server.max-http-header-size=16384 \
     eureka.registration.enabled=false \
     eureka.instance.leaseRenewalIntervalInSeconds=1 \
     eureka.client.instanceInfoReplicationIntervalSeconds=1 \
-    activemq.brokerUrl=http://172.16.238.3:61616/ \
+    activemq.brokerUrl=tcp://172.16.238.3:61616 \
     ribbon.eureka.enabled=true \
     system.initialclientid=service-runner \
     spring.profiles.active=production
