--- a/rhythm-ms-scripts/Dockerfile
+++ b/rhythm-ms-scripts/Dockerfile
@@ -34,7 +34,7 @@ ENV server.max-http-header-size=16384 \
     eureka.instance.leaseRenewalIntervalInSeconds=1 \
     initialInstanceInfoReplicationIntervalSeconds=0 \
     eureka.client.instanceInfoReplicationIntervalSeconds=1 \
-    activemq.brokerUrl=http://172.16.238.3:61616 \
+    activemq.brokerUrl=tcp://172.16.238.3:61616 \
     ribbon.eureka.enabled=true \
     system.initialclientid=service-runner \
     spring.profiles.active=production
