--- a/kubernetes-scripts/cassandra.yml
+++ b/kubernetes-scripts/cassandra.yml
@@ -1,3 +1,50 @@
+# apiVersion: v1
+# kind: PersistentVolume
+# metadata:
+#   name: cassandra-pv
+# spec:
+#   accessModes:
+#     - ReadWriteOnce
+#   capacity:
+#     storage: 10Gi
+#   persistentVolumeReclaimPolicy: Retain
+#   storageClassName: standard
+#   gcePersistentDisk:
+#     fsType: ext4
+#     pdName: apache-fineract-pd
+
+# ---
+
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: cassandra-pvc
+  namespace: default
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 10Gi
+  # volumeName: cassandra-pv
+
+---
+
+apiVersion: v1
+kind: Service
+metadata:
+  name: cassandra-cluster
+  namespace: default
+spec:
+  selector:
+    app: cassandra
+  ports:
+    - port: 9042
+      targetPort: 9042
+  type: LoadBalancer
+
+---
+
 apiVersion: extensions/v1beta1
 kind: Deployment
 metadata:
@@ -19,50 +66,25 @@ spec:
         app: cassandra
     spec:
       containers:
-        - image: docker.io/_/cassandra
-          #imagePullPolicy: Always
+        - image: docker.io/cassandra
+          imagePullPolicy: IfNotPresent
           name: cassandra
+          ports:
+            - containerPort: 9042
+              name: cql
           livenessProbe:
             exec:
               command:
                 - cqlsh
-                - ping
-                - -h
-                - <ip-adress>
-            httpGet:
-              path: /admin
-              port: 8161
+                - --help
             initialDelaySeconds: 10
             timeoutSeconds: 1
             periodSeconds: 10
             failureThreshold: 3
-
----
-
-apiVersion: v1
-kind: PersistentVolume
-metadata:
-  name: cassandra-pv
-spec:
-  accessModes:
-    - ReadWriteOnce
-  capacity:
-    storage: 10Gi
-  persistentVolumeReclaimPolicy: Retain
-  gcePersistentDisk:
-    fsType: ext4
-    pdName: apache-fineract-pd
-
----
-
-apiVersion: v1
-kind: PersistentVolumeClaim
-metadata:
-  name: cassandra-pvc
-  namespace: default
-spec:
-  accessModes:
-    - ReadWriteOnce
-  resources:
-    requests:
-      storage: 10Gi
+          volumeMounts:
+            - mountPath: /var/lib/cassandra
+              name: cassandra-storage
+      volumes:
+        - name: cassandra-storage
+          persistentVolumeClaim:
+            claimName: cassandra-pvc
