--- a/kubernetes-scripts/provisioner.yml
+++ b/kubernetes-scripts/provisioner.yml
@@ -36,19 +36,19 @@ spec:
       containers:
       - name: myapp
         image: docker.io/anh3h/provisioner-ms
-        imagePullPolicy: IfNotPresent
+        imagePullPolicy: Always
         env:
           - name: eureka.instance.hostname
-            value: 35.231.169.122
+            value: 35.194.61.47
           - name: ribbon.listOfServers
-            value: 35.231.169.122:9090
+            value: 35.194.61.47:9090
           - name: eureka.client.serviceUrl.defaultZone
-            value: http://35.231.169.122:8761/eureka
+            value: http://35.194.61.47:8761/eureka
           - name: activemq.brokerUrl
-            value: tcp://35.227.125.206:61616
+            value: tcp://35.188.59.246:61616
           - name: cassandra.contactPoints
-            value: 35.237.151.82:9042
+            value: 35.192.186.138:9042
           - name: mariadb.host
-            value: 35.229.63.46
+            value: 35.224.33.201
         ports:
           - containerPort: 2020
