Update network and service configuration
- Create network in start-up script and update external tools compose file to use existing network.
- Update Fineract service docker configuration in compose file.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,12 +24,12 @@ services:
       dockerfile: Dockerfile
     container_name: rhythm-ms
     environment:
-      eureka.instance.hostname: 172.16.238.2
-      ribbon.listOfServers: 172.16.238.2:9090
-      eureka.client.serviceUrl.defaultZone: http://172.16.238.2:8761/eureka
-      activemq.brokerUrl: tcp://172.16.238.3:61616
-      cassandra.contactPoints: 172.16.238.5:9042
-      mariadb.host: 172.16.238.4
+      eureka.instance.hostname: eureka
+      ribbon.listOfServers: eureka:9090
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka
+      activemq.brokerUrl: tcp://activemq:61616
+      cassandra.contactPoints: cassandra:9042
+      mariadb.host: mariadb
       system.publicKey.timestamp: ${TIMESTAMP}
       system.publicKey.modulus: ${MODULUS}
       system.publicKey.exponent: ${EXPONENT}
@@ -42,12 +42,12 @@ services:
       dockerfile: Dockerfile
     container_name: office-ms
     environment:
-      eureka.instance.hostname: 172.16.238.2
-      ribbon.listOfServers: 172.16.238.2:9090
-      eureka.client.serviceUrl.defaultZone: http://172.16.238.2:8761/eureka
-      activemq.brokerUrl: tcp://172.16.238.3:61616
-      cassandra.contactPoints: 172.16.238.5:9042
-      mariadb.host: 172.16.238.4
+      eureka.instance.hostname: eureka
+      ribbon.listOfServers: eureka:9090
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka
+      activemq.brokerUrl: tcp://activemq:61616
+      cassandra.contactPoints: cassandra:9042
+      mariadb.host: mariadb
       system.publicKey.timestamp: ${TIMESTAMP}
       system.publicKey.modulus: ${MODULUS}
       system.publicKey.exponent: ${EXPONENT}
@@ -60,12 +60,12 @@ services:
       dockerfile: Dockerfile
     container_name: customer-ms
     environment:
-      eureka.instance.hostname: 172.16.238.2
-      ribbon.listOfServers: 172.16.238.2:9090
-      eureka.client.serviceUrl.defaultZone: http://172.16.238.2:8761/eureka
-      activemq.brokerUrl: tcp://172.16.238.3:61616
-      cassandra.contactPoints: 172.16.238.5:9042
-      mariadb.host: 172.16.238.4
+      eureka.instance.hostname: eureka
+      ribbon.listOfServers: eureka:9090
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka
+      activemq.brokerUrl: tcp://activemq:61616
+      cassandra.contactPoints: cassandra:9042
+      mariadb.host: mariadb
       system.publicKey.timestamp: ${TIMESTAMP}
       system.publicKey.modulus: ${MODULUS}
       system.publicKey.exponent: ${EXPONENT}
@@ -78,12 +78,12 @@ services:
       dockerfile: Dockerfile
     container_name: ledger-ms
     environment:
-      eureka.instance.hostname: 172.16.238.2
-      ribbon.listOfServers: 172.16.238.2:9090
-      eureka.client.serviceUrl.defaultZone: http://172.16.238.2:8761/eureka
-      activemq.brokerUrl: tcp://172.16.238.3:61616
-      cassandra.contactPoints: 172.16.238.5:9042
-      mariadb.host: 172.16.238.4
+      eureka.instance.hostname: eureka
+      ribbon.listOfServers: eureka:9090
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka
+      activemq.brokerUrl: tcp://activemq:61616
+      cassandra.contactPoints: cassandra:9042
+      mariadb.host: mariadb
     networks:
       default:
         ipv4_address: 172.16.238.11
@@ -93,12 +93,12 @@ services:
       dockerfile: Dockerfile
     container_name: portfolio-ms
     environment:
-      eureka.instance.hostname: 172.16.238.2
-      ribbon.listOfServers: 172.16.238.2:9090
-      eureka.client.serviceUrl.defaultZone: http://172.16.238.2:8761/eureka
-      activemq.brokerUrl: tcp://172.16.238.3:61616
-      cassandra.contactPoints: 172.16.238.5:9042
-      mariadb.host: 172.16.238.4
+      eureka.instance.hostname: eureka
+      ribbon.listOfServers: eureka:9090
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka
+      activemq.brokerUrl: tcp://activemq:61616
+      cassandra.contactPoints: cassandra:9042
+      mariadb.host: mariadb
       system.publicKey.timestamp: ${TIMESTAMP}
       system.publicKey.modulus: ${MODULUS}
       system.publicKey.exponent: ${EXPONENT}
@@ -111,12 +111,12 @@ services:
       dockerfile: Dockerfile
     container_name: deposit-ms
     environment:
-      eureka.instance.hostname: 172.16.238.2
-      ribbon.listOfServers: 172.16.238.2:9090
-      eureka.client.serviceUrl.defaultZone: http://172.16.238.2:8761/eureka
-      activemq.brokerUrl: tcp://172.16.238.3:61616
-      cassandra.contactPoints: 172.16.238.5:9042
-      mariadb.host: 172.16.238.4
+      eureka.instance.hostname: eureka
+      ribbon.listOfServers: eureka:9090
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka
+      activemq.brokerUrl: tcp://activemq:61616
+      cassandra.contactPoints: cassandra:9042
+      mariadb.host: mariadb
       system.publicKey.timestamp: ${TIMESTAMP}
       system.publicKey.modulus: ${MODULUS}
       system.publicKey.exponent: ${EXPONENT}
@@ -129,12 +129,12 @@ services:
       dockerfile: Dockerfile
     container_name: teller-ms
     environment:
-      eureka.instance.hostname: 172.16.238.2
-      ribbon.listOfServers: 172.16.238.2:9090
-      eureka.client.serviceUrl.defaultZone: http://172.16.238.2:8761/eureka
-      activemq.brokerUrl: tcp://172.16.238.3:61616
-      cassandra.contactPoints: 172.16.238.5:9042
-      mariadb.host: 172.16.238.4
+      eureka.instance.hostname: eureka
+      ribbon.listOfServers: eureka:9090
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka
+      activemq.brokerUrl: tcp://activemq:61616
+      cassandra.contactPoints: cassandra:9042
+      mariadb.host: mariadb
       system.publicKey.timestamp: ${TIMESTAMP}
       system.publicKey.modulus: ${MODULUS}
       system.publicKey.exponent: ${EXPONENT}
@@ -147,12 +147,12 @@ services:
       dockerfile: Dockerfile
     container_name: report-ms
     environment:
-      eureka.instance.hostname: 172.16.238.2
-      ribbon.listOfServers: 172.16.238.2:9090
-      eureka.client.serviceUrl.defaultZone: http://172.16.238.2:8761/eureka
-      activemq.brokerUrl: tcp://172.16.238.3:61616
-      cassandra.contactPoints: 172.16.238.5:9042
-      mariadb.host: 172.16.238.4
+      eureka.instance.hostname: eureka
+      ribbon.listOfServers: eureka:9090
+      eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka
+      activemq.brokerUrl: tcp://activemq:61616
+      cassandra.contactPoints: cassandra:9042
+      mariadb.host: mariadb
       system.publicKey.timestamp: ${TIMESTAMP}
       system.publicKey.modulus: ${MODULUS}
       system.publicKey.exponent: ${EXPONENT}
@@ -165,12 +165,12 @@ services:
   #     dockerfile: Dockerfile
   #   container_name: payroll-ms
   #   environment:
-  #     eureka.instance.hostname: 172.16.238.2
-  #     ribbon.listOfServers: 172.16.238.2:9090
-  #     eureka.client.serviceUrl.defaultZone: http://172.16.238.2:8761/eureka
-  #     activemq.brokerUrl: tcp://172.16.238.3:61616
-  #     cassandra.contactPoints: 172.16.238.5:9042
-  #     mariadb.host: 172.16.238.4
+  #     eureka.instance.hostname: eureka
+  #     ribbon.listOfServers: eureka:9090
+  #     eureka.client.serviceUrl.defaultZone: http://eureka:8761/eureka
+  #     activemq.brokerUrl: tcp://activemq:61616
+  #     cassandra.contactPoints: cassandra:9042
+  #     mariadb.host: mariadb
   #     system.publicKey.timestamp: ${TIMESTAMP}
   #     system.publicKey.modulus: ${MODULUS}
   #     system.publicKey.exponent: ${EXPONENT}
